fixed footer text align

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1111,6 +1111,7 @@ $gray: #585656;
 }
 
 .footer__address-company {
+  text-align: end;
   padding-top: 1.25rem;
 }
 
